# MARS

gps_module/: package.xml
gps_module/launch/: gps_loc.launch
gps_module/scripts/: m7_ros.py
mars_detect/: CMakeLists.txt  README.md  package.xml
mars_detect/cfg/: DetectorParams.cfg  single.yaml  single_config.yaml
mars_detect/launch/: aruco_detect.launch  stag_detect.launch
mars_detect/scripts/: .gitignore  cfg_edit.py
mars_detect/src/: .aruco_detect.cpp.swp  aruco_detect.cpp
mars_detect/src/stag_ros/: stag_detect.cpp
mars_msg/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
mars_nav/: CMakeLists.txt  package.xml
mars_nav/launch/: main.launch  rosserial.launch
mars_nav/scripts/: .commander.py.swp  bot_firmware.py  commander.py
src/: Arduino-Testcode_Test2.2.4_.ino  ESP-Programmcode.ino  I2C-Testcode.ino  MARS_APP.aia  MARS_Encoder_Motor_Driver.ino  MEGA_Regelung_3.1.ino  i2c_Fahrbefehlsender.ino
src/gps/: README.md
src/gps/scripts/: demo.py
src/gps_module/: CMakeLists.txt  README.md
src/gps_module/scripts/: m7_ros.py
src/imega_arduino/: README.md
src/uno/firmware/: CMakeLists.txt  driving.cpp
uno/: CMakeLists.txt  README.md  package.xml
uno/firmware/: .chatter.cpp.swp  .driving.cpp.swo  CMakeLists.txt  chatter.cpp  driving.cpp
