<?xml version="1.0"?>
<package format="2">
  <name>mars_detect</name>
  <version>0.11.0</version>
  <description>Fiducial detection</description>

  <maintainer email="tp@ubiquityrobotics.org">Teodor Janez Podobnik</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>visualization_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>fiducial_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>python-cairosvg</depend>
  <depend>camera_info_manager</depend>

</package>
